--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,18 @@
   z-index: -1;
 }
 
+/*.col1{
+  padding-left: 2em;
+  padding-top: 1em;
+}
+.col2{padding-top: 1em;}
+.col3{padding-top:1em;}
+.col4{padding-top:1em;}
+.col5{
+  padding-right: 2em;
+  padding-top: 1em;
+}*/
+
 .centeredAlign {
   width: 100%;
   height: 100%;
