Improved design for dashboard

--- a/src/Dashboard/dashboard.css
+++ b/src/Dashboard/dashboard.css
@@ -4,17 +4,17 @@
     grid-template-columns:180px 150px 180px 150px 150px;
     padding: 5px;
     align-content: center;
-    background-color: #E9967A;
+    /*background-color: #E9967A;*/
     grid-column-end: initial;
 
 }
 .grid-item{
     padding:10px;
-    background-color: #FAEBD7;
+    /*background-color: #FAEBD7;*/
 }
 .grid-item3{
     padding: 10px;
-    background-color: #FAEBD7;
+    /*background-color: #FAEBD7;*/
     grid-column: 3/6;
 }
 {/*.grid-notif{
