--- a/src/Dashboard/index.css
+++ b/src/Dashboard/index.css
@@ -1,17 +1,25 @@
 :root{
+
+
+    --main_color : #196070;
+    --text_color : #e5ffe0;
+    --background_color: #f5f5dc;
+    
+        
+    /*Uncomment below to see a dark theme*/
+    
     --main_color : #27221F;
+    --text_color : #f5f5df;
+    --background_color: #ffffff;
+    
 }
 
-@media screen and (min-width: 800px){
 .right-side{
-    /*grid-column-start: 5;
-    grid-column-end : 13;*/
     grid-column: 9 / 13;		/*start at 5th col line and span 8 cols*/
-    /*background-color:#27221F/*#ff3067/*e5e520/*e0f711*//*f4e72c*//*27221F*/;
-    color:white;
-    background-color: black;
+    /*6*/
+    color:var(--text_color);
+    background-color: var(--main_color);
     overflow-y: scroll;
-}
 }
 
 @media screen and (max-width: 800px)
@@ -22,39 +30,59 @@
     .left-side{
     grid-column: 1 / 13; /* start on line 1 and end on line 5 */
     overflow: scroll;
-    /*background-color: #325b2f/*#519b4f*/;
-    color : white;
-    /*height: 700px;*/
+    /*2*/
+    color : /*white*/black;
+    }
+
+    ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     }
 }
 
 .left-side{
-    grid-column: 1 / 9; /* start on line 1 and end on line 5 */
+    grid-column: 1 / 9; /* start on line 1 and end on line 9 */
     overflow: hidden;
     /*background-color: #325b2f/*#519b4f*/;
-    color : white;
-    height: 650px;
+    /*3*/
+    height: 620px;
 }
 
 .button{
     align:left;
-    /*border-radius: 6%;*/
-    font-size:11px;
+    /*5*/
+    color : var(--text_color);
+    display: inline-grid;
+    border:solid;
+    border-width: 0em .15em .15em 0em;
+    border-color:#f6e6de;
+}
+
+.button:hover{
+    box-shadow: 0px 4px 6px 2px rgba(0,0,0, 0.3) ;
+}
+
+.button_after{
+    box-shadow: 0px 4px 6px 2px rgba(0,0,0, 0.3) ;
+}
+
+._after{
+    box-shadow: 0px 4px 6px 2px rgba(0,0,0, 0.3) ;
 }
 
 .button1{
     background-color:var(--main_color)/*#5f9bfc*/;
-    color :white;
+    width: 50%;
 }
 
 .button2{
     background-color:var(--main_color)/*#009925*/;
-    color :white;
+    width: 50%;
 }
 
 .header{
-    background-color: var(--main_color);
-    color : white;
+    background-color: var(--text_color);
+    /*4*/
+    color : var(--main_color);
     font-size:18px;
     padding-top: .3em;
     
@@ -63,7 +91,7 @@
 .notifs{
     height: 75%;
     overflow: scroll;
-    background-color: white;
+    background-color: /*#F4F142*/white;
     color : black;
 }
 
@@ -84,11 +112,11 @@
 #main-div
 {
     max-height: 1200px;
+    background-color: var(--background_color);
 }
 
 .grid-item{
-    /*padding: 10px;*/
-    /*border:solid;*/
+    
 }
 
 .remaining-info-user{
@@ -98,12 +126,7 @@
 
 .user-avatar{
     border-radius: 50%;
-    box-shadow: 0 4px 8px 0 rgba(255, 255, 255 ,0.2);
-}
-
-.user-avatar:hover{
-    border-radius: 50%;
-    box-shadow: 2px 4px 8px 2px rgba(255, 255, 255 ,0.3);
+    box-shadow: 0 6px 8px 0 rgba(0,0,0, 0.3);
 }
 
 /*If you want your grid layout to contain 4 columns,
@@ -144,12 +167,6 @@ specify the width of the 4 columns, or "auto" if all
 
 ::-webkit-scrollbar {
     width: 0.3em;
-}
-
-@media screen and(max-width: 800px){
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
 }
 
 ::-webkit-scrollbar-thumb {
