--- a/src/Dashboard/index.css
+++ b/src/Dashboard/index.css
@@ -6,12 +6,12 @@
     --background_color: #f5f5dc;
     
         
-    /*Uncomment below to see a dark theme*/
-    
+    /*Uncomment below to see the dark theme*/
+    /*
     --main_color : #27221F;
     --text_color : #f5f5df;
     --background_color: #ffffff;
-    
+    */
 }
 
 .right-side{
