--- a/src/FrontSlide.css
+++ b/src/FrontSlide.css
@@ -50,6 +50,24 @@ h1.Title {
 .FrontSlide {
 	opacity: 1;
 	transition: all 1s;
+	position: relative;
+	z-index: 1;
+}
+
+.logoClass {
+	background-image: url("./logo.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 75%;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	opacity: .3;
+	width: 100%;
+	height: 100%;
 }
 
 .FrontSlide-register {
